<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BridgePMT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Sign in</string>
    <string name="forgotPassword">Forgot Password:</string>
    <string name="LoginUrl">http://10.0.0.113:8080/api/</string>
    <string name="ok">ok</string>
    <string name="NoInternetConnection">No Internet connection</string>
    <string name="InvalidUsernameOrPassword">Invalid Username Or Password</string>
    <string name="EvaluateDeveloper">Evaluate a developer</string>
    <string name="EvaluateHistory">Evaluate History</string>
    <string name="EvaluationReportSummary">Evaluation Report Summary</string>    
    <string name="EmailCannotBeNull"> Email cannot be null</string>
    <string name="NoProjectAdded">No Project Added</string>
    <string name="NoDevelopersFound">No Developers Found</string>
    <string name="NoPendingMonths">No Pending Months</string>
    <string name="Success">Success</string>
    <string name="NoCameraAvailable">No Camera Available</string>

     
     
      
   
    
    
  

</resources>
