<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    
     >
      
          <TextView
       android:id="@+id/txt_nearby" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="Developer Evaluation"
        android:textColor="@color/white"
        >
        </TextView>
    
     <RelativeLayout 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         >
        
        
    
    <Button 
        android:id="@+id/btnEvaluateDev"
        android:layout_height="40dp"
        android:layout_width="250dp"
        android:text="@string/EvaluateDeveloper"
        
       />
     <Button 
        android:id="@+id/btnEvaluateHistory"
        android:layout_height="40dp"
        android:layout_width="250dp"
        android:layout_below="@+id/btnEvaluateDev"
        android:text="@string/EvaluateHistory"
       />
      <Button 
        android:id="@+id/btnEvaluateReportSummary"
        android:layout_height="40dp"
        android:layout_width="250dp"
        android:layout_below="@+id/btnEvaluateHistory"
         android:text="@string/EvaluationReportSummary"
 
       />
         
         
         
     </RelativeLayout>
   
    

</RelativeLayout>
