<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   android:background="@color/white" >

   
   <TextView
      android:id="@+id/tvusername"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_marginTop="68dp"
      android:text="@string/username"
      android:textColor="@color/black"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/etusername"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/tvusername"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/tvusername"
      android:textColor="@color/black"
      android:ems="10" >

      <requestFocus />
   </EditText>

   <TextView
      android:id="@+id/tvpassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/tvusername"
      android:layout_below="@+id/tvusername"
      android:layout_marginTop="38dp"
      android:text="@string/password"
      android:textColor="@color/black"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/etpassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/tvpassword"
      android:layout_alignLeft="@+id/etusername"
      android:ems="10"
      android:textColor="@color/black"
      android:inputType="textPassword" />

   <Button
      android:id="@+id/btnlogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/etusername"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="94dp"
      android:onClick="login"
      android:textColor="@color/black"
      android:text="@string/Login" />

   <TextView
      android:id="@+id/tvforgotpassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/tvpassword"
      android:layout_below="@+id/btnlogin"
      android:layout_marginLeft="60dp"
      android:layout_marginTop="20dp"
      android:textColor="@color/black"
      android:text="@string/forgotPassword"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   
   
  

</RelativeLayout>